sumo/tests/netconvert/errors/errors/xml_no_edg/errors.netconvert
Error: No edges loaded.
Quitting (on error).
